<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>stage_ros</name>
  <version>1.9.0</version>
  <description>This package provides ROS specific hooks for stage</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">https://ros.org/wiki/stage_ros</url>
  <url type="repository">https://github.com/sousarbarb/stage_ros</url>
  <url type="repository">https://github.com/ros-simulation/stage_ros</url>
  <url type="bugtracker">https://github.com/sousarbarb/stage_ros/issues</url>
  <url type="bugtracker">https://github.com/ros-simulation/stage_ros/issues</url>

  <author email="gerky@osrfoundation.org">Brian Gerky</author>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>stage</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>

</package>